# raytracer-one-weekend

./: .gitignore  CMakeLists.txt  README.MD
include/: color.hpp  vec3.hpp
src/: color.cpp  main.cpp  vec3.cpp
